# DocSlime

./: .gitignore  .prettierignore  Cargo.toml  README.md  docmd.config.json  package-lock.json  package.json  vercel.json
.agents/skills/docgen-adr/: SKILL.md
.agents/skills/docgen-fill/: SKILL.md
.agents/skills/docgen-init/: SKILL.md
.agents/skills/docgen-install/: SKILL.md
.agents/skills/docgen-kiss/: SKILL.md
.agents/skills/docslime-adr/: SKILL.md
.agents/skills/docslime-fill/: SKILL.md
.agents/skills/docslime-init/: SKILL.md
.agents/skills/docslime-install/: SKILL.md
.agents/skills/docslime-kiss/: SKILL.md
.github/workflows/: ci.yml  release.yml  sync-staging.yml
.impeccable/critique/: 2026-07-09T20-59-43Z__docs-index-md.md  2026-07-09T21-58-35Z__docs-index-md.md
assets/: adr.md
docs/: 0-MISSION.md  1-EXPERIENCES.md  2-REQUIREMENTS.md  3-ARCHITECTURE.md  4-TESTING.md  DESIGN.md  PRODUCT.md  README.md  REQUIREMENTS.md  index.md  lifecycle.md  publishing.md  skills.md
docs/0-PRODUCT/: README.md
docs/1-JOURNEYS/: README.md
docs/2-DESIGN/: README.md  style-guide.md
docs/2-ENGINEERING/: README.md
docs/2-ENGINEERING/ADRs/: 0001-embed-templates-in-binary.md  README.md
docs/3-ENGINEERING/: README.md
docs/assets/css/: docslime-brand.css
docs/assets/js/: docslime-nav.js
docs/assets/styles/: docslime.css
docs/engineering/: ARCHITECTURE.md  OBSERVABILITY.md  PUBLISHING.md  README.md  TESTING.md
docs/engineering/adrs/: README.md  (+1 more)
docs/experience/: README.md
docs/strategy/: README.md
scripts/: check-rendered-line-breaks.mjs  format-markdown-comments.mjs
site/: 404.html  index.html  llms-full.txt  llms.json  llms.txt  robots.txt  search-index.json  sitemap.xml
site/0-PRODUCT/: index.html
site/1-EXPERIENCES/: index.html
site/1-JOURNEYS/: index.html
site/2-REQUIREMENTS/: index.html
site/3-ARCHITECTURE/: index.html
site/3-ENGINEERING/: index.html
site/4-TESTING/: index.html
site/DESIGN/: index.html
site/PRODUCT/: index.html
site/README/: index.html
site/REQUIREMENTS/: index.html
site/assets/: adr.md
site/engineering/: index.html
site/experience/: index.html
site/okf/: index.md  okf.yaml
site/publishing/: index.html
site/skills/: index.html
site/strategy/: index.html
src/: cli.rs  main.rs  scaffold.rs  templates.rs
src/commands/: add.rs  init.rs  list.rs  mod.rs
templates/: 1-EXPERIENCES.md  2-REQUIREMENTS.md  3-ARCHITECTURE.md  4-TESTING.md  DESIGN.md  PRODUCT.md  README.md  REQUIREMENTS.md
templates/0-PRODUCT/: README.md
templates/3-ENGINEERING/: README.md
templates/engineering/: ARCHITECTURE.md  OBSERVABILITY.md  PUBLISHING.md  README.md  TESTING.md
templates/experience/: README.md
templates/strategy/: README.md
tests/: cli.rs
(+50 files in other folders)
