[package]
name = "docgen"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Scaffold a standardized, BDD-oriented docs/ tree into a git repo, with templates designed for AI agents to fill in."
license = "MIT"
homepage = "https://github.com/DecisionNerd/docgen"
repository = "https://github.com/DecisionNerd/docgen"
readme = "README.md"

[[bin]]
name = "docgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
anyhow = "1"
thiserror = "1"
owo-colors = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# A GitHub repo to push Homebrew formulas to
tap = "DecisionNerd/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
